--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
   sdk: ^3.1.1
 
 dependencies:
+  device_preview: ^1.2.0
   flutter:
     sdk: flutter
   flutter_svg: ^1.0.3 
@@ -35,7 +36,7 @@ flutter:
   uses-material-design: true
   
   assets:
-  - assets/images/Screen_1.png
+  - assets/images/Intro.png
   - assets/icons/home.svg
   - assets/icons/leftCircle.svg
   - assets/icons/rightCircle.svg
